# p1-kernel

./: .gitignore  404.html  CREDITS  LICENSE  README-next-xzl  config.mk  dbg-rpi3qemu.sh  dbg-virt.sh  env-local.sh  env-qemu.sh  gen-useronly.sh  index.html  makeall.sh  qemu-info-mtree  qemu-info-qtree  run-rpi3qemu.sh  run-virt.sh  sitemap.xml
archived/assignment weights - old/: index.html
archived/ssh-proxy - jumphost old/: index.html
cheatsheet/: index.html
docs/: README.md  dump.md  gdb.md  mac-howto.md  qemu.md  rationales.md  ssh-proxy-windows-caveat-jumphost.md  ssh-proxy.md
docs/archived/: assignment weights - old.md  ssh-proxy - jumphost old.md
docs/exp0/: rpi-os-full.md  rpi-os.md
docs/exp1/: rpi-os.md
docs/exp2/: rpi-os.md
docs/exp3/: fb.md  rpi-os.md
docs/exp4a/: rpi-os.md
docs/exp4b/: rpi-os.md
docs/exp5/: rpi-os.md
docs/exp6/: rpi-os.md
dump/: index.html
exp0/rpi-os/: index.html
exp0/rpi-os-full/: index.html
exp1/rpi-os/: index.html
exp1/workflow/: index.html
exp2/rpi-os/: index.html
exp3/fb/: index.html
exp3/rpi-os/: index.html
exp4a/rpi-os/: index.html
exp4b/rpi-os/: index.html
exp5/rpi-os/: index.html
exp6/TA notes on VM/: index.html
exp6/rpi-os/: index.html
gdb/: index.html
jtag/: index.html
kernel/: Makefile  README-build.txt  alloc.c  boot-legacy.S  boot-wait.S  boot.S  console.c  elf.h  entry.S  entry.h  exec.c  fb.h  fcntl.h  ff.c  file.c  file.h  fs.c  fs.h  gic.h  irq.c  kb.c  kb.h  kernel.c  linker-rpi3.ld  linker-rpi3qemu.ld  list.h  log.c  machineinfo.c  mbox.c  mini_uart.c  mm.c  mmu.h  param.h  pipe.c  pl011.c  plat-rpi3qemu.h  plat.h  printf.c  ramdisk.c  sched.S  (+27 more)
qemu/: index.html
rationales/: index.html
scripts/: README  delay-exit.bat  download.bat
search/: search_index.json
src/: current
src/exp1/: Makefile.qemu  dbg.sh  run.sh
src/exp10-newlib/: cleanall.sh  dbg-rpi3qemu.sh  makeall.sh  run-virt.sh
src/exp2/: dbg.sh  run.sh
src/exp3/: CREDITS  dbg.sh  run.sh
src/exp3-bonus/: .gitignore
src/exp4a/: Makefile.qemu
src/exp5/: run.sh
src/exp6/: kernel8.asm  kernel8.map
src/exp7/: Makefile  Makefile.qemu  mon.sh  qemu-trace.txt
src/exp8/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.orig  cmake_install.cmake  dbg.sh
src/exp8/src/: boot.S  console.c  debug.h  entry.S  exec.c  file.c  fork.c  fs.c  irq.c  kernel.c  mm.c  mmu.h  param.h  pipe.c  plat-rpi3.h  plat-virt.h  printf.c  sched.c  sched.h  sleeplock.c  spinlock.c  spinlock.h  string.c  sys.c  syscall.h  sysfile.c  user.c  user.h  user_sys.h  utils.S  utils.h  virtio.h  virtio_disk.c
src/exp8/src/user/: Makefile  echo.asm  echo.c  echo.sym  ulib.c  usertests.c  usys.S
src/exp9/: .nfs000000001648cf9100002800  CREDITS  Makefile  (+7 more)
ssh-proxy/: index.html
ssh-proxy-windows-caveat-jumphost/: index.html
staged/: ampibind.c  boot-UP.S  boot-pgtables.S  boot-smp.S  coroutine.c  coroutine.h  fork.c  pl011-trivial.c  printf.tiny.c  printf.tiny.h  usb-notes
usr/: .gitignore  Makefile  buzz.c  cat.c  forktest.c  librules.mk  ln.c  logo.txt  ls.c  mkfs.c  rm.c  sh.c  slider.c  uio.c  ulib.c  umalloc.c  user.h  user.ld  usertests.c  usys.S
(+421 files in other folders)
